@@ -497,6 +497,18 @@
          <emphasis role="bold">Normal-Service</emphasis> (0)</programlisting>
         </listitem>
       </varlistentry>
+
+      <varlistentry>
+        <term><emphasis role="bold">HELPER —
+        "<emphasis>helper</emphasis>"</emphasis></term>
+
+        <listitem>
+          <para>Added in Shorewall-perl 4.2.0 Beta 2. Names a Netfiler
+          protocol <firstterm>helper</firstterm> module such as
+          <option>ftp</option>, <option>sip</option>, <option>amanda</option>,
+          etc.</para>
+        </listitem>
+      </varlistentry>
     </variablelist>
   </refsect1>
 
