@@ -113,6 +113,12 @@ Other Changes in Shoreall 4.2.0 Beta 2.
    Those two scripts allow me to save and restore the contents of my
    ipsets automatically under Shorewall-perl/Shorewall-lite (my
    routestopped file does not use ipsets).
+
+2) A HELPER column is included in the tcrules file. The value in this
+   column names one of the Netfilter protocol 'helper' module sets
+   (ftp, sip, amanda, etc).
+
+   See http://www.shorewall.net/traffic_shaping.htm for an example. 
     
 None.
 
