@@ -4,6 +4,8 @@ Changes in 4.2.0-Beta2
 
 2)  Implement 'save' user exit.
 
+3)  HELPER column in tcrules.
+
 Changes in 4.2.0-Beta1
 
 1)  Fix handling of firewall marks.
